GNOME Bugzilla – Bug 786262
[shell] Fix gnome-settings-daemon MediaKeys API use
Last modified: 2017-08-19 07:11:43 UTC
I'm attaching a completely untested patch I think fixes this issue. https://mail.gnome.org/archives/distributor-list/2017-April/msg00009.html gnome-settings-daemon 3.25 completely drops the old D-Bus name so fixing this is required for 3.26.
Created attachment 357534 [details] [review] [shell] Fix gnome-settings-daemon MediaKeys API use
Comment on attachment 357534 [details] [review] [shell] Fix gnome-settings-daemon MediaKeys API use Pushed, thanks!