Fix gnome-settings-daemon MediaKeys API use

https://bugzilla.gnome.org/show_bug.cgi?id=786262